# gtsam-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
examples/: hello.rs  simple_pose_estimation_3d.rs
src/: lib.rs
src/geometry/: mod.rs  point3.rs  pose3.rs  rot3.rs
src/inference/: key.rs  mod.rs  symbol.rs
src/linear/: mod.rs  noise_model.rs
src/nonlinear/: levenberg_marquardt_optimizer.rs  levenberg_marquardt_params.rs  mod.rs  nonlinear_factor_graph.rs  values.rs
sys/: Cargo.toml  build.rs
sys/src/: lib.rs
sys/src/base/: rust.hpp
sys/src/geometry/: mod.rs  point3.cc  point3.h  pose3.cc  pose3.h  pose3.rs  rot3.cc  rot3.h  rot3.rs
sys/src/inference/: symbol.cc  symbol.h
sys/src/linear/: noise_model.cc  noise_model.h
sys/src/nonlinear/: levenberg_marquardt_optimizer.cc  levenberg_marquardt_optimizer.h  levenberg_marquardt_params.cc  levenberg_marquardt_params.h  mod.rs  nonlinear_factor.h  nonlinear_factor_graph.cc  nonlinear_factor_graph.h  nonlinear_factor_graph.rs  values.cc  values.h
